--- a/README.Rmd
+++ b/README.Rmd
@@ -12,8 +12,19 @@ knitr::opts_chunk$set(
 ```
 
 # ECoFarchive
+```{r message=FALSE, warning=FALSE, include=FALSE}
+library(stringr)
+library(badger)
+available_releases <- dir("archive") %>%
+  stringr::str_extract_all('(?<=ECoF_).+?(?=.rds)') %>%
+  unlist()
+latest_release <- sort(available_releases)[1]
+```
 
 <!-- badges: start -->
+`r badge_github_actions("mattiaghilardi/ECoFarchive", "download-ECoF")`
+`r badge_license(color = "lightgrey")`
+`r badge_custom("latest release", latest_release, "blue")`
 <!-- badges: end -->
 
-This repository serves as the [Eschmeyer's Catalog of Fishes](https://research.calacademy.org/research/ichthyology/catalog/fishcatmain.asp) archive accessed through the `fishrfun` R package (currently in development).
+This repository serves as the [Eschmeyer's Catalog of Fishes](https://research.calacademy.org/research/ichthyology/catalog/fishcatmain.asp) archive accessed through the [`fishrfun`](https://github.com/mattiaghilardi/fishrfun) R package (currently in development).
