--- a/README.Rmd
+++ b/README.Rmd
@@ -16,15 +16,18 @@ knitr::opts_chunk$set(
 library(stringr)
 library(badger)
 available_releases <- dir("archive") %>%
-  stringr::str_extract_all('(?<=ECoF_).+?(?=.rds)') %>%
+  str_extract_all('(?<=ECoF_).+?(?=.rds)') %>%
   unlist()
 latest_release <- sort(available_releases)[1]
+url <- str_c("https://github.com/mattiaghilardi/ECoFarchive/blob/main/archive/ECoF_", 
+             latest_release, 
+             ".rds")
 ```
 
 <!-- badges: start -->
 `r badge_github_actions("mattiaghilardi/ECoFarchive", "download-ECoF")`
 `r badge_license(color = "lightgrey")`
-`r badge_custom("latest release", latest_release, "blue")`
+`r badge_custom("latest release", latest_release, "blue", url = url)`
 <!-- badges: end -->
 
 This repository serves as the [Eschmeyer's Catalog of Fishes](https://research.calacademy.org/research/ichthyology/catalog/fishcatmain.asp) archive accessed through the [`fishrfun`](https://github.com/mattiaghilardi/fishrfun) R package (currently in development).
